--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rescue</title>
+    <link rel="shortcut icon" href="./img/pngtree-front-view-of-colorful-apache-chief-skull-head-png-image_15551089.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="./js/jquery-collision.js"></script>
 </head>
 <body>
     <div id="container"> 
